log
Thu Mar 26 07:13:10 PM UTC 2026: 
 list.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   46 |     list.head =NULL;
      |         ^
      |         ->
list.c:47:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   47 |     list.current = 0;
      |         ^
      |         ->
list.c:48:9: error: ‘list’ is a pointer; did you mean to use ‘->’?
   48 |     list.size = 0;
      |         ^
      |         ->
02e3007
Thu Mar 26 07:13:47 PM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   48 |     list->size = 0;
      |         ^~
ab8d924
Thu Mar 26 07:14:28 PM UTC 2026: 
 list.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   39 |     list->size = 0;
      |         ^~
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
b2c8933
Thu Mar 26 07:15:01 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:39:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   39 |     list->size = 0;
      |         ^~
3d5ccae
Thu Mar 26 07:16:46 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
b0e163f
Thu Mar 26 07:24:50 PM UTC 2026: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:98:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   98 |     Nodo *izq = list->current->prev;
      |     ^~~~
      |     Node
list.c:98:17: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   98 |     Nodo *izq = list->current->prev;
      |                 ^~~~
list.c:99:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   99 |     Nodo *der = list->current->next;
      |     ^~~~
      |     Node
list.c:99:17: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   99 |     Nodo *der = list->current->next;
      |                 ^~~~
list.c:101:8: error: request for member ‘next’ in something not a structure or union
  101 |     izq->next = der;
      |        ^~
list.c:102:8: error: request for member ‘prev’ in something not a structure or union
  102 |     der->prev = izq;
      |        ^~
41fc0c8
Thu Mar 26 07:25:43 PM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
b78d5b5
Thu Mar 26 07:32:40 PM UTC 2026: 
 list.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:99:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   99 |     Nodo *der = list->current->next;
      |     ^~~~
      |     Node
list.c:99:17: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   99 |     Nodo *der = list->current->next;
      |                 ^~~~
list.c:102:19: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Wincompatible-pointer-types]
  102 |         izq->next = der;
      |                   ^
list.c:103:12: error: request for member ‘prev’ in something not a structure or union
  103 |         der->prev = izq;
      |            ^~
list.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
1a63b9e
Thu Mar 26 07:35:19 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
c49e17b
